fix layout spacing

--- a/client/src/style/components.css
+++ b/client/src/style/components.css
@@ -57,14 +57,16 @@
 .browser-container {
   background-color: #233248;
   padding: 20px;
-  border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 0;
   border-right: 1px solid #233952;
+  width: 80%;
 }
 
 .incognito-container {
   background-color: #233248;
   padding: 20px;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 0 0;
+  width: 20%;
 }
 
 .time-container {
